<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="296dp"
        android:layout_height="271dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/mobilenavigatorlogo"
        android:src="@mipmap/logo" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="250dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingStart="30sp"
        android:textColorHint="@color/textField"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="186dp"
        android:background="@drawable/text_bg"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="10sp"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:paddingStart="30sp"
        android:textColorHint="@color/textField"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:background="@drawable/login_btn"
        android:text="@string/login_label"
        android:textColor="@android:color/background_light"
        tools:text="Login" />

    <Button
        android:id="@+id/login_signupButton"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp"
        android:background="@drawable/signup_btn"
        android:text="@string/signup"
        android:textColor="@color/textField"
        tools:text="@string/login_signupLabel" />


    <ProgressBar
        android:id="@+id/login_progressbar"
        android:layout_width="37dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>


</RelativeLayout>